[package]
name = "bingrep-regex"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "bgr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
iter_tools = "0.17.0"
num-format = "0.4.4"
pretty-hex = "0.4.1"
regex = "1.10.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
